deploy: 01393b2ce7c4f8c77958fed890a54056cbf64094

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -150,6 +150,14 @@
 <p>Hi,</p>
 <p>This book is here to give you guidance on how to work with the engine. We are constantly working on
 improving the onboarding as much as possible.</p>
+<p>Besides this book we have several other resources which might be good to checkout:</p>
+<ul>
+<li><a href="https://ourmachinery.com/apidoc/apidoc.html">Our API Documentation</a></li>
+<li><a href="https://ourmachinery.com/post/">Our Blog</a></li>
+<li><a href="https://anchor.fm/ourmachinery">Our Podcast</a></li>
+<li><a href="https://discord.gg/SHHSZaH">Our Discord</a></li>
+<li><a href="https://github.com/OurMachinery/themachinery-public/discussions">Our Github Discussion Board</a></li>
+</ul>
 <p>Enjoy!</p>
 <p><em>The Machinery Team</em></p>
 
