--- a/tutorials/print.html
+++ b/tutorials/print.html
@@ -151,6 +151,14 @@
 <p>Hi,</p>
 <p>This book is here to give you guidance on how to work with the engine. We are constantly working on
 improving the onboarding as much as possible.</p>
+<p>Besides this book we have several other resources which might be good to checkout:</p>
+<ul>
+<li><a href="https://ourmachinery.com/apidoc/apidoc.html">Our API Documentation</a></li>
+<li><a href="https://ourmachinery.com/post/">Our Blog</a></li>
+<li><a href="https://anchor.fm/ourmachinery">Our Podcast</a></li>
+<li><a href="https://discord.gg/SHHSZaH">Our Discord</a></li>
+<li><a href="https://github.com/OurMachinery/themachinery-public/discussions">Our Github Discussion Board</a></li>
+</ul>
 <p>Enjoy!</p>
 <p><em>The Machinery Team</em></p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="creation-graph"><a class="header" href="#creation-graph">Creation Graph</a></h1>
@@ -1437,9 +1445,16 @@ TM_DLL_EXPORT void tm_load_plugin(struct tm_api_registry_api *reg, bool load)
 }
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="ui"><a class="header" href="#ui">UI</a></h1>
+<p>The Machinery's <a href="https://ourmachinery.com/apidoc/plugins/ui">UI system</a>, is a Immediate Mode GUI (IMGUI). Besides the information you can find here or in our API Documentation there are several Blog Posts you should check out:</p>
+<ul>
+<li><a href="https://ourmachinery.com/post/one-draw-call-ui/">One Draw Call UI</a></li>
+<li><a href="https://ourmachinery.com/post/ui-rendering-using-primitive-buffers/">UI rendering using Primitive Buffers</a></li>
+<li><a href="https://ourmachinery.com/post/implementing-drag-and-drop-in-an-imgui/">Implementing drag-and-drop in an IMGUI</a></li>
+<li><a href="https://ourmachinery.com/post/localization-in-the-machinerys-ui/">Localization in The Machinery’s UI</a></li>
+</ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="build-custom-ui-controls"><a class="header" href="#build-custom-ui-controls">Build Custom UI Controls</a></h1>
-<p>This walkthrough we will learn how to use The Machinery <a href="https://ourmachinery.com/apidoc/plugins/ui">UI system</a>.</p>
-<p>In the parts 1 - 3 we will cover the following topics:</p>
+<p>These walkthroughs we will teach you how to extend The Machinery's <a href="https://ourmachinery.com/apidoc/plugins/ui">UI system</a>.</p>
+<p>In following following parts 1 - 3 we will cover the following topics:</p>
 <ul>
 <li><a href="https://ourmachinery.github.io/themachinery-books//tutorials/ui/build_custom_ui_controls/part1.html">Create a custom circular button</a></li>
 <li><a href="https://ourmachinery.github.io/themachinery-books//tutorials/ui/build_custom_ui_controls/part2.html">Add a texture to our custom control</a></li>
