--- a/tutorials/ui/index.html
+++ b/tutorials/ui/index.html
@@ -147,6 +147,13 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="ui"><a class="header" href="#ui">UI</a></h1>
+<p>The Machinery's <a href="https://ourmachinery.com/apidoc/plugins/ui">UI system</a>, is a Immediate Mode GUI (IMGUI). Besides the information you can find here or in our API Documentation there are several Blog Posts you should check out:</p>
+<ul>
+<li><a href="https://ourmachinery.com/post/one-draw-call-ui/">One Draw Call UI</a></li>
+<li><a href="https://ourmachinery.com/post/ui-rendering-using-primitive-buffers/">UI rendering using Primitive Buffers</a></li>
+<li><a href="https://ourmachinery.com/post/implementing-drag-and-drop-in-an-imgui/">Implementing drag-and-drop in an IMGUI</a></li>
+<li><a href="https://ourmachinery.com/post/localization-in-the-machinerys-ui/">Localization in The Machinery’s UI</a></li>
+</ul>
 
                     </main>
 
