--- a/tutorials/ui/build_custom_ui_controls/index.html
+++ b/tutorials/ui/build_custom_ui_controls/index.html
@@ -147,8 +147,8 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="build-custom-ui-controls"><a class="header" href="#build-custom-ui-controls">Build Custom UI Controls</a></h1>
-<p>This walkthrough we will learn how to use The Machinery <a href="https://ourmachinery.com/apidoc/plugins/ui">UI system</a>.</p>
-<p>In the parts 1 - 3 we will cover the following topics:</p>
+<p>These walkthroughs we will teach you how to extend The Machinery's <a href="https://ourmachinery.com/apidoc/plugins/ui">UI system</a>.</p>
+<p>In following following parts 1 - 3 we will cover the following topics:</p>
 <ul>
 <li><a href="https://ourmachinery.github.io/themachinery-books//tutorials/ui/build_custom_ui_controls/part1.html">Create a custom circular button</a></li>
 <li><a href="https://ourmachinery.github.io/themachinery-books//tutorials/ui/build_custom_ui_controls/part2.html">Add a texture to our custom control</a></li>
