--- a/index.html
+++ b/index.html
@@ -43,14 +43,8 @@
 
   
   
-  <link type=text/css rel=stylesheet href=https://ourmachinery.com/css/bootstrap.min.css   integrity=  media="screen, print" />
-  <link type=text/css rel=stylesheet href=https://ourmachinery.com/css/style.min.css   integrity=  media="screen, print" />
-  
-
-  
-  
-  <link href="https://ourmachinery.com/index.xml" rel="alternate" type="application/rss+xml" title="Our Machinery" />
-  
+  <link type=text/css rel=stylesheet href="https://ourmachinery.github.io/themachinery-books/css/bootstrap.min.css" media="screen, print" />
+  <link type=text/css rel=stylesheet href="https://ourmachinery.github.io/themachinery-books/css/style.min.css" media="screen, print" />
 
   <link rel="canonical" href="https://ourmachinery.com/tutorials/" />
 
@@ -76,8 +70,8 @@
   <script>hljs.initHighlightingOnLoad();</script>
   
   
-  <script type="text/javascript" src=https://ourmachinery.com/js/bootstrap.bundle.min.js    integrity= ></script>
-  <script type="text/javascript" src=https://ourmachinery.com/js/page.min.js    integrity= ></script>
+  <script type="text/javascript" src="https://ourmachinery.github.io/themachinery-books/js/bootstrap.bundle.min.js" ></script>
+  <script type="text/javascript" src="https://ourmachinery.github.io/themachinery-books/js/page.min.js"></script>
   
   
   
