deploy: a9b487bd94bcb4c5331e0ab5c57ad00f76bcb441

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -148,7 +148,7 @@
                     <main>
                         <h1 id="welcome"><a class="header" href="#welcome">Welcome</a></h1>
 <p>Hi,</p>
-<p>This book is here to give you guidance on how to work with the engine. We are constantly working on improving the onboarding as much as possible. If you have not read about the basic concepts of the engine you might want to start at there before you move on to this book. <a href="https://ourmachinery.github.io/themachinery-books//the_machinery_book/index.html">The Machinery Book</a></p>
+<p>This book is here to give you guidance on how to work with the engine. We are constantly working on improving the onboarding as much as possible. If you have not read about the basic concepts of the engine you might want to start at there before you move on to this book <a href="https://ourmachinery.github.io/themachinery-books//the_machinery_book/index.html">The Machinery Book</a>.</p>
 <p>Besides this book we have several other resources which might be good to checkout:</p>
 <ul>
 <li><a href="https://ourmachinery.com/apidoc/apidoc.html">Our API Documentation</a></li>
