--- a/tutorials/physics/index.html
+++ b/tutorials/physics/index.html
@@ -252,7 +252,7 @@ this and have the nodes actually return arrays of objects.)</p>
 <p><img src="https://www.dropbox.com/s/og7wipthmw1hl7d/tm_tut_physics_shapes.png?dl=1" alt="" /></p>
 <p><em>Shapes</em> are reused Entities to demonstrate different kind of Physic Bodies.</p>
 <blockquote>
-<p>**Note: **If you change any of those Prototypes all the none modified instances will change as well. Keep this in mind when playing around with the samples.</p>
+<p><strong>Note:</strong> If you change any of those Prototypes all the none modified instances will change as well. Keep this in mind when playing around with the samples.</p>
 </blockquote>
 
                     </main>
