--- a/tutorials/print.html
+++ b/tutorials/print.html
@@ -149,7 +149,7 @@
                     <main>
                         <h1 id="welcome"><a class="header" href="#welcome">Welcome</a></h1>
 <p>Hi,</p>
-<p>This book is here to give you guidance on how to work with the engine. We are constantly working on improving the onboarding as much as possible. If you have not read about the basic concepts of the engine you might want to start at there before you move on to this book. <a href="https://ourmachinery.github.io/themachinery-books//the_machinery_book/index.html">The Machinery Book</a></p>
+<p>This book is here to give you guidance on how to work with the engine. We are constantly working on improving the onboarding as much as possible. If you have not read about the basic concepts of the engine you might want to start at there before you move on to this book <a href="https://ourmachinery.github.io/themachinery-books//the_machinery_book/index.html">The Machinery Book</a>.</p>
 <p>Besides this book we have several other resources which might be good to checkout:</p>
 <ul>
 <li><a href="https://ourmachinery.com/apidoc/apidoc.html">Our API Documentation</a></li>
@@ -281,7 +281,7 @@ this and have the nodes actually return arrays of objects.)</p>
 <p><img src="https://www.dropbox.com/s/og7wipthmw1hl7d/tm_tut_physics_shapes.png?dl=1" alt="" /></p>
 <p><em>Shapes</em> are reused Entities to demonstrate different kind of Physic Bodies.</p>
 <blockquote>
-<p>**Note: **If you change any of those Prototypes all the none modified instances will change as well. Keep this in mind when playing around with the samples.</p>
+<p><strong>Note:</strong> If you change any of those Prototypes all the none modified instances will change as well. Keep this in mind when playing around with the samples.</p>
 </blockquote>
 <div style="break-before: page; page-break-before: always;"></div><h2 id="triggers"><a class="header" href="#triggers">Triggers</a></h2>
 <p>This walkthrough shows you how to create a trigger with the Graph Component. You can find the &quot;source code&quot; in our <a href="https://ourmachinery.com/samples.html">Physic Samples</a>.</p>
